@@ -170,8 +170,7 @@ public class BondBridgeHandler extends BaseBridgeHandler {
     @Override
     public void childHandlerInitialized(ThingHandler childHandler, Thing childThing) {
         super.childHandlerInitialized(childHandler, childThing);
-        if (childHandler instanceof BondDeviceHandler) {
-            BondDeviceHandler handler = (BondDeviceHandler) childHandler;
+        if (childHandler instanceof BondDeviceHandler handler) {
             synchronized (handlers) {
                 // Start the BPUP update service after the first child device is added
                 startUDPListenerJob();
@@ -184,8 +183,7 @@ public class BondBridgeHandler extends BaseBridgeHandler {
 
     @Override
     public void childHandlerDisposed(ThingHandler childHandler, Thing childThing) {
-        if (childHandler instanceof BondDeviceHandler) {
-            BondDeviceHandler handler = (BondDeviceHandler) childHandler;
+        if (childHandler instanceof BondDeviceHandler handler) {
             synchronized (handlers) {
                 handlers.remove(handler);
                 if (handlers.isEmpty()) {
@@ -200,7 +198,7 @@ public class BondBridgeHandler extends BaseBridgeHandler {
     /**
      * Forwards a push update to a device
      *
-     * @param the {@link BPUPUpdate object}
+     * @param pushUpdate the {@link BPUPUpdate object}
      */
     public void forwardUpdateToThing(BPUPUpdate pushUpdate) {
         updateStatus(ThingStatus.ONLINE);
@@ -210,7 +208,7 @@ public class BondBridgeHandler extends BaseBridgeHandler {
         String deviceId = null;
         String topicType = null;
         if (topic != null) {
-            String parts[] = topic.split("/");
+            String[] parts = topic.split("/");
             deviceId = parts[1];
             topicType = parts[2];
         }
@@ -332,7 +330,7 @@ public class BondBridgeHandler extends BaseBridgeHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(BondDiscoveryService.class);
+        return Set.of(BondDiscoveryService.class);
     }
 
     public void setDiscoveryService(BondDiscoveryService discoveryService) {
