@@ -16,9 +16,9 @@ import static org.openhab.binding.kaleidescape.internal.KaleidescapeBindingConst
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
@@ -189,7 +189,7 @@ public class KaleidescapeHandler extends BaseThingHandler implements Kaleidescap
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(KaleidescapeThingActions.class);
+        return List.of(KaleidescapeThingActions.class);
     }
 
     public void handleRawCommand(@Nullable String command) {
@@ -229,8 +229,8 @@ public class KaleidescapeHandler extends BaseThingHandler implements Kaleidescap
                         }
                         break;
                     case VOLUME:
-                        if (command instanceof PercentType) {
-                            this.volume = (int) ((PercentType) command).doubleValue();
+                        if (command instanceof PercentType percentCommand) {
+                            this.volume = (int) percentCommand.doubleValue();
                             logger.debug("Got volume command {}", this.volume);
                             connector.sendCommand(SEND_EVENT_VOLUME_LEVEL_EQ + this.volume);
                         }
